--- a/WsFed/McaAadWsfed/Views/_ViewImports.cshtml
+++ b/WsFed/McaAadWsfed/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using McaAadWsfed
-@using McaAadWsfed.Models
+﻿@using Marcusca10.AadAppsDemos.Wsfed
+@using Marcusca10.AadAppsDemos.Wsfed.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
