--- a/WsFed/McaAadWsfed/Views/Shared/_Layout.cshtml
+++ b/WsFed/McaAadWsfed/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
+
+                <!-- login link on navbar -->
+                @await Html.PartialAsync("_LoginPartial")
+
             </div>
         </div>
     </nav>
