--- a/WsFed/McaAadWsfed/Views/Home/About.cshtml
+++ b/WsFed/McaAadWsfed/Views/Home/About.cshtml
@@ -5,3 +5,29 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+
+<div class="table-responsive">
+    <table class="table table-condensed table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Type</th>
+                <th scope="col">Value</th>
+                <th scope="col">Issuer</th>
+                <th scope="col">OriginalIssuer</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            @foreach (var claim in Model)
+            {
+                <tr>
+                    <td>@claim.Type</td>
+                    <td>@claim.Value</td>
+                    <td>@claim.Issuer</td>
+                    <td>@claim.OriginalIssuer</td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
+</div>
